# pub

./: .gitignore  .mise.toml  env.sh  package.json
auth/: Cargo.toml  README.md  api.nt  api.proto  i18n.sh
auth/cron/: .gitignore  banTld.coffee  conf.coffee  cron.nt
auth/db/function/: ArchId.sql  BrowserId.sql  BrowserVerId.sql  GpuId.sql  HardwareId.sql  HostIdMailUid.sql  IdMail.sql  LangId.sql  MailHostId.sql  MailId.sql  MailNew.sql  MailUid.sql  NameId.sql  NameLog.sql  OsId.sql  OsVerId.sql  PasswdSet.sql  UaId.sql  UidMail.sql  UidMailIdNew.sql  UidMailNew.sql  UidMailUpdate.sql  UidSignIn.sql  WidthHeightId.sql
auth/db/table/: Arch.sql  Browser.sql  BrowserVer.sql  Gpu.sql  Hardware.sql  Lang.sql  Mail.sql  MailHost.sql  NameLog.sql  Os.sql  OsVer.sql  Passwd.sql  PasswdLog.sql  Ua.sql  UidClient.sql  UidMail.sql  UidMailLog.sql  UidSignIn.sql  WidthHeight.sql
auth/db/trigger/: PasswordLog.sql  UidMailUpdate.sql
auth/i18n/: .gitignore
auth/i18n/af/: i18n.yml  verifyMail.md
auth/i18n/ak/: i18n.yml  verifyMail.md
auth/i18n/am/: i18n.yml  verifyMail.md
auth/i18n/ar/: i18n.yml  verifyMail.md
auth/i18n/as/: i18n.yml  verifyMail.md
auth/i18n/ay/: i18n.yml  verifyMail.md
auth/i18n/az/: i18n.yml  verifyMail.md
auth/i18n/be/: i18n.yml  verifyMail.md
auth/i18n/bg/: i18n.yml  verifyMail.md
auth/i18n/bho/: i18n.yml  verifyMail.md
auth/i18n/bm/: i18n.yml  verifyMail.md
auth/i18n/bn/: i18n.yml  verifyMail.md
auth/i18n/bs/: i18n.yml  verifyMail.md
auth/i18n/ca/: i18n.yml  verifyMail.md
auth/i18n/ceb/: i18n.yml  verifyMail.md
auth/i18n/ckb/: i18n.yml  verifyMail.md
auth/i18n/co/: i18n.yml  verifyMail.md
auth/i18n/cs/: i18n.yml  verifyMail.md
auth/i18n/cy/: i18n.yml  verifyMail.md
auth/i18n/da/: i18n.yml  verifyMail.md
auth/i18n/de/: i18n.yml  verifyMail.md
auth/i18n/dv/: i18n.yml  verifyMail.md
auth/i18n/ee/: i18n.yml  verifyMail.md
auth/i18n/el/: i18n.yml  verifyMail.md
auth/i18n/en/: i18n.yml  verifyMail.md
auth/i18n/eo/: i18n.yml  verifyMail.md
auth/i18n/es/: i18n.yml  verifyMail.md
auth/i18n/et/: i18n.yml  verifyMail.md
auth/i18n/eu/: i18n.yml  verifyMail.md
auth/i18n/fa/: i18n.yml  verifyMail.md
auth/i18n/fi/: i18n.yml  verifyMail.md
auth/i18n/fil/: i18n.yml  verifyMail.md
auth/i18n/fr/: i18n.yml  verifyMail.md
auth/i18n/fy/: i18n.yml  verifyMail.md
auth/i18n/ga/: i18n.yml  verifyMail.md
auth/i18n/gl/: i18n.yml  verifyMail.md
auth/i18n/gn/: i18n.yml  verifyMail.md
auth/i18n/gu/: i18n.yml  verifyMail.md
auth/i18n/ha/: i18n.yml  verifyMail.md
auth/i18n/haw/: i18n.yml  verifyMail.md
auth/i18n/he/: i18n.yml  verifyMail.md
auth/i18n/hi/: i18n.yml  verifyMail.md
auth/i18n/hmn/: i18n.yml  verifyMail.md
auth/i18n/hr/: i18n.yml  verifyMail.md
auth/i18n/ht/: i18n.yml  verifyMail.md
auth/i18n/hu/: i18n.yml  verifyMail.md
auth/i18n/hy/: i18n.yml  verifyMail.md
auth/i18n/id/: i18n.yml  verifyMail.md
auth/i18n/ig/: i18n.yml  verifyMail.md
auth/i18n/ilo/: i18n.yml  verifyMail.md
auth/i18n/is/: i18n.yml  verifyMail.md
auth/i18n/it/: i18n.yml  verifyMail.md
auth/i18n/ja/: i18n.yml  verifyMail.md
auth/i18n/jv/: i18n.yml  verifyMail.md
auth/i18n/ka/: i18n.yml  verifyMail.md
auth/i18n/kk/: i18n.yml  verifyMail.md
auth/i18n/km/: i18n.yml  verifyMail.md
auth/i18n/kn/: i18n.yml  verifyMail.md
auth/i18n/ko/: i18n.yml  verifyMail.md
auth/i18n/ku/: i18n.yml  verifyMail.md
auth/i18n/ky/: i18n.yml  verifyMail.md
auth/i18n/la/: i18n.yml  verifyMail.md
auth/i18n/lb/: i18n.yml  verifyMail.md
auth/i18n/lg/: i18n.yml  verifyMail.md
auth/i18n/ln/: i18n.yml  verifyMail.md
auth/i18n/lo/: i18n.yml  verifyMail.md
auth/i18n/lt/: i18n.yml  verifyMail.md
auth/i18n/lv/: i18n.yml  verifyMail.md
auth/i18n/mai/: i18n.yml  verifyMail.md
auth/i18n/mg/: i18n.yml  verifyMail.md
auth/i18n/mi/: i18n.yml  verifyMail.md
auth/i18n/mk/: i18n.yml  verifyMail.md
auth/i18n/ml/: i18n.yml  verifyMail.md
auth/i18n/mn/: i18n.yml  verifyMail.md
auth/i18n/mr/: i18n.yml  verifyMail.md
auth/i18n/ms/: i18n.yml  verifyMail.md
auth/i18n/mt/: i18n.yml  verifyMail.md
auth/i18n/my/: i18n.yml  verifyMail.md
auth/i18n/ne/: i18n.yml  verifyMail.md
auth/i18n/nl/: i18n.yml  verifyMail.md
auth/i18n/no/: i18n.yml  verifyMail.md
auth/i18n/nso/: i18n.yml  verifyMail.md
auth/i18n/ny/: i18n.yml  verifyMail.md
auth/i18n/om/: i18n.yml  verifyMail.md
auth/i18n/or/: i18n.yml  verifyMail.md
auth/i18n/pa/: i18n.yml  verifyMail.md
auth/i18n/pl/: i18n.yml  verifyMail.md
auth/i18n/ps/: i18n.yml  verifyMail.md
auth/i18n/pt/: i18n.yml  verifyMail.md
auth/i18n/qu/: i18n.yml  verifyMail.md
auth/i18n/ro/: i18n.yml  verifyMail.md
auth/i18n/ru/: i18n.yml  verifyMail.md
auth/i18n/rw/: i18n.yml  verifyMail.md
auth/i18n/sa/: i18n.yml  verifyMail.md
auth/i18n/sd/: i18n.yml  verifyMail.md
auth/i18n/si/: i18n.yml  verifyMail.md
auth/i18n/sk/: i18n.yml  verifyMail.md
auth/i18n/sl/: i18n.yml  verifyMail.md
auth/i18n/sm/: i18n.yml  verifyMail.md
auth/sh/: hookEnd.sh  hostNew.coffee  init.coffee  srv_host.sh
auth/src/: K.rs  conf_meta.rs  exit.rs  exit_all.rs  i18n.rs  lang.rs  li.rs  lib.rs  macro.rs  me.rs  name.rs  new_mail.rs  passwd.rs  reset.rs  rm.rs  set.rs  set_mail.rs  sign_up.rs
captcha/: Cargo.toml  api.nt  api.proto  rustc-ice-2024-09-11T13_19_40-49882.txt
captcha/src/: db.rs  lib.rs
github/: Cargo.toml  api.nt  api.proto
github/src/: lib.rs  new.rs
mailsub/: Cargo.toml  api.nt  api.proto
mailsub/src/: lib.rs
pay/: Cargo.toml  README.md  api.nt  api.proto  redis.lua
pay/cron/: cron.nt  exchange.coffee  package.json
pay/db/: init.sql
pay/src/: LUA.rs  bill.rs  bind.rs  li.rs  lib.rs  rm.rs  set_default.rs  setup.rs  topup.rs
pay_db/: Cargo.toml  README.md  dev.sh
pay_db/src/: K.rs  LUA.rs  api.rs  bill_month.rs  cid.rs  exchange.rs  lib.rs
ping/: Cargo.toml
token/: Cargo.toml  api.nt  api.proto
token/src/: K.rs  lib.rs  new.rs  refresh.rs  rm.rs  turn.rs
webpush/: Cargo.toml  api.nt
webpush/src/: lib.rs
ws/: Cargo.toml
ws/src/: lib.rs
(+122 files in other folders)
