[package]
name = "github"
version = "0.1.0"
edition = "2021"

[dependencies]
r = { path = "../../../rust/lib/r" }
axum = "0.7.5"
auth = { path = "../auth" }
client = { path = "../../../rust/lib/client" }
pay_db = { path = "../pay_db" }
genv = "0.1.12"
ghapi = "0.1.8"
prost = "0.13.1"
re = "0.1.8"
serde = "1.0.208"
static_init = "1.0.3"
t3 = "0.1.20"
tokio = "1.39.2"
xerr = "0.1.14"
xmail = "0.1.8"
xtld = "0.1.3"
m = { path = "../../../rust/lib/m" }
sonic-rs = "0.3.10"
ub64 = { version = "0.0.10", features = ["u64"] }
jarg = "0.1.8"
int-enum = "1.1.2"
mysql_async = "0.34.2"
sts = "0.1.23"
intbin = "0.1.2"

[build-dependencies]
aok = "0.1.12"
prost-build = "0.13.1"

[package.metadata.cargo-machete]
ignored = ["prost"]
