[package]
name = "mailsub"
version = "0.1.0"
edition = "2021"

[dependencies]
auth = { path="../auth" }
bytes = "1.7.1"
client = { path = "../../../rust/lib/client" }
prost = "0.13.1"
re = "0.1.8"
t3 = "0.1.20"
m = { path = "../../../rust/lib/m" }
sonic-rs = "0.3.10"
lang = "0.1.30"

[build-dependencies]
aok = "0.1.12"
prost-build = "0.13.1"

[package.metadata.cargo-machete]
ignored = ["prost"]
