workspace = { members = ["bin/manual_deposit"] }

[package]
name = "pay"
version = "0.1.0"
edition = "2021"

[dependencies]
client = { path = "../../../rust/lib/client" }
m = { path = "../../../rust/lib/m" }
pay_db = { path = "../pay_db" }
prost = "0.13.1"
sonic-rs = "0.3.10"
sts = "0.1.23"
trt = "0.1.29"
jarg = "0.1.8"
re = "0.1.8"
t3 = "0.1.20"
static_init = "1.0.3"
genv = "0.1.12"
async-stripe = { version = "0.38.1", features = ["runtime-tokio-hyper-rustls"] }

# serde = { version = "1.0.193", features = ["derive"] }
[build-dependencies]
aok = "0.1.12"
prost-build = "0.13.1"

[package.metadata.cargo-machete]
ignored = ["prost", "static_init", "async-stripe"]
