workspace = { members = ["bin/manual_deposit"] }

[package]
name = "pay"
version = "0.1.0"
edition = "2021"

[dependencies]
client = { path = "../../../rust/lib/client" }
m = { path = "../../../rust/lib/m" }
pay_db = { path = "../pay_db" }
prost = "0.13.3"
sonic-rs = "0.3.14"
sts = "0.1.23"
trt = "0.1.29"
jarg = "0.1.9"
re = "0.1.9"
t3 = "0.1.20"
static_init = "1.0.3"
genv = "0.1.15"
async-stripe = { version = "0.39.1", features = ["runtime-tokio-hyper-rustls"] }

# serde = { version = "1.0.193", features = ["derive"] }
[build-dependencies]
aok = "0.1.15"
prost-build = "0.13.3"

[package.metadata.cargo-machete]
ignored = ["prost", "static_init", "async-stripe"]
