[package]
name = "pay_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m = { path = "../../../rust/lib/m" }
r = { path = "../../../rust/lib/r" }
aok = "0.1.12"
sts = "0.1.23"
trt = "0.1.29"
intbin = "0.1.2"
vb = "0.1.5"
b62 = "0.1.4"
ub64 = { version = "0.0.10", features = ["u64"] }
genv = "0.1.12"
tracing = "0.1.40"
xstr = "0.1.11"
mysql_async = "0.34.2"
static_init = "1.0.3"
dashmap = "6.0.1"
gcd = "2.3.0"
async-stripe = { version = "0.38.1", features = ["runtime-tokio-hyper-rustls"] }
xbin = "0.1.4"

[package.metadata.cargo-machete]
ignored = ["async-stripe"]
