[package]
name = "webpush"
version = "0.1.0"
edition = "2021"

[dependencies]
auth = { path = "../auth" }
client = { path = "../../../rust/lib/client" }
prost = "0.13.1"
re = "0.1.8"
t3 = "0.1.20"
m = { path = "../../../rust/lib/m" }
lang = "0.1.30"
jarg = "0.1.8"
dashmap = "6.0.1"
static_init = "1.0.3"
base64 = "0.22.1"

[build-dependencies]
aok = "0.1.12"
prost-build = "0.13.1"

[package.metadata.cargo-machete]
ignored = ["prost"]
