[package]
name = "webpush"
version = "0.1.0"
edition = "2021"

[dependencies]
auth = { path = "../auth" }
client = { path = "../../../rust/lib/client" }
prost = "0.13.3"
re = "0.1.9"
t3 = "0.1.20"
m = { path = "../../../rust/lib/m" }
lang = "0.1.32"
jarg = "0.1.9"
dashmap = "6.1.0"
static_init = "1.0.3"
base64 = "0.22.1"

[build-dependencies]
aok = "0.1.15"
prost-build = "0.13.3"

[package.metadata.cargo-machete]
ignored = ["prost"]
